# School

./: README.md
AndroidSearchApp/: README.md
AndroidSearchApp/ProjectXapp/: .io-config.json  config.xml  ionic.config.json  package.json
AndroidSearchApp/Projectx/: Program.cs  Projectx.csproj  Startup.cs  appsettings.json  bower.json
AndroidSearchApp/Projectx/Controllers/: AccountController.cs  HomeController.cs  ManageController.cs  SpiderController.cs
MiniGolfGame/: CMakeLists.txt  Collision.cpp  Collision.h  Musicstream.cpp  Musicstream.h  README.MD  ball.cpp  ball.h  controls.cpp  controls.h  functions.cpp  functions.h  highscore.cpp  highscore.h  layer.cpp  layer.h  machine.cpp  machine.h  main.cpp  map.cpp  map.h  object.cpp  object.h  obstacle.cpp  obstacle.h  settings.cpp  settings.h  singlePlayer.cpp  singlePlayer.h  sprite.cpp  sprite.h  state.h  stateMainMenu.cpp  stateMainMenu.h  stateRunning.cpp  stateRunning.h  util.h
MiniGolfGame/data/Graphics/Textures/: frictiontest.json  golftiled.json  mapByAnders.json  pokemonGOlfLvl1.json  pokemonGOlfLvl2.json  rubenMap.json
NewSticker/: Program.cs  Startup.cs  appsettings.json  bower.json  project.json
NewSticker/Controllers/: AccountController.cs  HomeController.cs  ManageController.cs  StickerController.cs
NewSticker/Data/: ApplicationDbContext.cs
NewSticker/Models/: ApplicationUser.cs
NewSticker/Properties/: launchSettings.json
NewSticker/Services/: IEmailSender.cs  ISmsSender.cs  MessageServices.cs
NewSticker/Views/: _ViewImports.cshtml
TestBinaryClock/src/: #BinaryClock.cpp#
(+133 files in other folders)
